--- a/.gitignore
+++ b/.gitignore
@@ -2,16 +2,10 @@ main
 main.exe
 main.tds
 .DS_Store
-build/*
-!build/.gitkeep
-include/*
-!include/.gitkeep
-doc/*
-!doc/.gitkeep
-lib/*
-!lib/.gitkeep
 src/resources.c
 .clang_complete
 .*~
 compile_commands.json
 libbarcode
+barcode-x86-*.exe
+barcode-x64-*.exe
